frontend/tests/cases/positive/interfaces/instances/instanceFreeVarAppApp.gr
interface Kinds a (b : Type -> Type)

-- a : Type -> Type
-- b : Type -> Type
-- c : Type
instance Kinds (a (b c)) b
