frontend/tests/cases/negative/interfaces/kind-mismatch/instancePatternsMismatchedKinds.gr
interface Kinds (a : Type) (b : Nat)

-- Use of same variable at different kinds
instance Kinds n n
